[package]
name = "battlesnake_tests"
version = "0.1.0"
authors = ["Corey Alexander <coreyja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
colored = "2.0.0"
glob = "0.3.0"
reqwest = { version="0.11.4", features=["blocking", "json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.22"
